<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background_dark"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@color/primary_orange"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_description"/>

    <TextView
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:text="@string/username_label"
        android:textColor="@color/text_white"
        android:layout_marginTop="80dp"
        android:layout_marginStart="28dp"
        android:layout_gravity="start"
        android:textSize="18sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/input_background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:textColor="@color/text_white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textColor="@color/text_white"
        android:layout_marginTop="30dp"
        android:layout_marginStart="28dp"
        android:layout_gravity="start"
        android:textSize="18sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/input_background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:textColor="@color/text_white"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/primary_orange"
        android:text="@string/login_button"
        android:textSize="18sp"/>

</LinearLayout>