<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark_variant"
    tools:context=".CobroActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/bg_header_ellipse"
        android:layout_marginTop="-100dp"
        android:contentDescription="@null"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_cobro_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="COBRO DE CUOTA"
                android:textColor="@color/main_accent"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/logo_small" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/form_background"
                android:padding="24dp">

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/toggle_button_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:singleSelection="true"
                    app:selectionRequired="true">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_toggle_socio"
                        style="@style/Widget.App.Button.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/toggle_socio"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_toggle_no_socio"
                        style="@style/Widget.App.Button.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/toggle_no_socio"/>
                </com.google.android.material.button.MaterialButtonToggleGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_dni_cobro"
                    style="@style/FormInputLayout"
                    android:layout_marginTop="24dp"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_search"
                    app:endIconTint="@color/color_light_gray"
                    android:hint="@string/form_dni">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_dni_cobro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="@color/text_white"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/FormInputLayout"
                    android:layout_marginTop="16dp"
                    android:enabled="false"
                    android:hint="@string/form_nombre">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_nombre_cobro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:textColor="@color/color_light_gray"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/FormInputLayout"
                    android:layout_marginTop="16dp"
                    android:enabled="false"
                    android:hint="@string/form_apellido">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_apellido_cobro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:textColor="@color/color_light_gray"/>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/socio_fields_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/FormInputLayout"
                        android:layout_marginTop="16dp"
                        app:endIconMode="custom"
                        app:endIconDrawable="@drawable/ic_calendar"
                        app:endIconTint="@color/color_light_gray"
                        android:hint="@string/form_fecha_ultimo_pago">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_ultima_cuota"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:inputType="none"
                            android:textColor="@color/text_white"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/FormInputLayout"
                        android:layout_marginTop="16dp"
                        app:endIconMode="custom"
                        app:endIconDrawable="@drawable/ic_calendar"
                        app:endIconTint="@color/color_light_gray"
                        android:hint="@string/form_fecha_vencimiento">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_fecha_vencimiento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:inputType="none"
                            android:textColor="@color/text_white"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/no_socio_fields_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/FormInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/form_actividad">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_actividad_cobro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapSentences"
                            android:textColor="@color/text_white"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/form_metodo_pago"
                    app:boxStrokeColor="@color/main_accent"
                    app:hintTextColor="@color/main_accent">
                    <AutoCompleteTextView
                        android:id="@+id/actv_metodo_pago"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:textColor="@color/text_white"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/FormInputLayout"
                    android:layout_marginTop="16dp"
                    android:hint="@string/form_monto">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_monto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textColor="@color/text_white"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_registrar_pago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    style="@style/PrimaryButton.Dark"
                    android:text="@string/form_registrar_pago"/>

            </LinearLayout>
        </ScrollView>

        <include layout="@layout/layout_bottom_navigation"/>
    </LinearLayout>
</FrameLayout>