<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/background_dark_variant"
    tools:context=".CuotasActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/bg_header_ellipse"
        android:layout_marginTop="-100dp"
        android:contentDescription="@null"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cuotas_vencidas_title"
                android:textColor="@color/main_accent"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/logo_small" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/FormInputLayout"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="30dp"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_search"
            app:endIconTint="@color/color_light_gray"
            android:hint="@string/form_buscar_socio">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_buscar_socio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/text_white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cuotas"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            tools:listitem="@layout/item_cuota_vencida"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <include layout="@layout/layout_bottom_navigation"/>

    </LinearLayout>
</FrameLayout>